@@ -429,6 +429,7 @@ GENERATED_HFILES = \
 dynamic-load.h \
 $(HEADER_DIR_BASE)/preface.h \
 $(GNUSTEP_TARGET_DIR)/config.h \
+$(GNUSTEP_TARGET_DIR)/common.h \
 $(GNUSTEP_TARGET_DIR)/GNUstepBase/GSConfig.h
 
 
