@@ -2361,61 +2361,6 @@ objc_create_block_classes_as_subclasses_of(Class super) __attribute__((weak));
 
 @end
 
-/*
- * Stuff for compatibility with 'Object' derived classes.
- */
-@interface	Object (NSObjectCompat)
-+ (NSString*) description;
-+ (void) release;
-+ (id) retain;
-- (NSString*) className;
-- (NSString*) description;
-- (void) release;
-- (BOOL) respondsToSelector: (SEL)aSel;
-- (id) retain;
-@end
-
-@implementation	Object (NSObjectCompat)
-+ (NSString*) description
-{
-  return NSStringFromClass(self);
-}
-+ (void) release
-{
-  return;
-}
-+ (id) retain
-{
-  return self;
-}
-- (NSString*) className
-{
-  return NSStringFromClass([self class]);
-}
-- (NSString*) description
-{
-  return [NSString stringWithFormat: @"<%s: %p>",
-    GSClassNameFromObject(self), self];
-}
-- (BOOL) isProxy
-{
-  return NO;
-}
-- (void) release
-{
-  return;
-}
-- (BOOL) respondsToSelector: (SEL)aSelector
-{
-  /* Object implements -respondsTo: */
-  return [self respondsTo: aSelector];
-}
-- (id) retain
-{
-  return self;
-}
-@end
-
 
 
 @implementation	NSZombie
